--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,44 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-    <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+<ion-content  class="ion-padding">
+    <h1  class="ion-text-center" ><ion-icon color="success" class="icon-7em" name="leaf"></ion-icon></h1>
+  <form [formGroup]="formLogin">
+    <ion-item>
+      <ion-icon name="mail"></ion-icon>
+      <ion-input placeholder="Seu Email" formControlName="email"></ion-input>
+      <ion-label *ngIf="this.formLogin.get('email').invalid && this.formLogin.get('email').touched" color="danger">Email Obrigatorio</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="key"></ion-icon>
+      <ion-input type="password" placeholder="Sua Senha" formControlName="senha"></ion-input>
+      <ion-label *ngIf="this.formLogin.get('senha').invalid && this.formLogin.get('senha').touched" color="danger">Senha Obrigatorio</ion-label>
+    </ion-item>
+  </form>
+  <ion-button expand="full"  color="success" (click)="entrar()">Entrar</ion-button>
 </ion-content>
