--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,12 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+
+.icon-7em {
+  font-size: 7em;
+}
+.color-fundo {
+  --color-fundo-base: #9AFF9A;
+ 
+}
